k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streaming-platform
  labels:
    name: streaming-platform
    environment: dev
