k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streaming-catalog-service
  namespace: streaming-platform
  labels:
    app: streaming-catalog-service
    environment: dev
spec:
  selector:
    app: streaming-catalog-service
  ports:
    - port: 80
      targetPort: 8082
      name: http
  type: ClusterIP
